--- a/tiles.yml
+++ b/tiles.yml
@@ -33,3 +33,8 @@
   bgcolor: "#000000"
   filename: ne_110m_admin_0_countries_lakes.shp
   layername: ne_110m_admin_0_countries_lakes
+  styles:
+    stroke: '#002240'
+    weight: '1'
+    line-join: 'round'
+    fill: '#ffffff'
